Fix jumping header

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,7 +4,6 @@
   padding-bottom: 20px;
   padding-top: 20px;
   position: relative;
-  transition: top 0.2s;
   max-width: 100vw;
   z-index: 2;
 }
